--- a/InstytulTabs/app/src/main/res/layout/activity_tabs.xml
+++ b/InstytulTabs/app/src/main/res/layout/activity_tabs.xml
@@ -29,10 +29,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
-                   <ListView
-                       android:layout_width="match_parent"
-                       android:layout_height="match_parent"
-                       android:id="@+id/listView_noticias"></ListView>
+                    <include layout="@layout/frame_noticias"></include>
+
                 </LinearLayout>
 
                 <!-- INSTITUCIONAL -->
